[gd_scene load_steps=2 format=3 uid="uid://clicker_main"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_main"]

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="GameContainer" type="Node2D" parent="."]

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 10

[node name="MainUI" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CurrencyDisplay" type="HBoxContainer" parent="UILayer/MainUI"]
layout_mode = 0
offset_left = 40.0
offset_top = 40.0
offset_right = 400.0
offset_bottom = 100.0

[node name="CoinIcon" type="TextureRect" parent="UILayer/MainUI/CurrencyDisplay"]
layout_mode = 2
custom_minimum_size = Vector2(60, 60)

[node name="CoinLabel" type="Label" parent="UILayer/MainUI/CurrencyDisplay"]
layout_mode = 2
text = "0"

[node name="ClickButton" type="TextureButton" parent="UILayer/MainUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0

[node name="ButtonPlaceholder" type="ColorRect" parent="UILayer/MainUI/ClickButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.8, 0.6, 0.2, 1)

[node name="ClickValueLabel" type="Label" parent="UILayer/MainUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 180.0
offset_right = 100.0
offset_bottom = 220.0
text = "+1 / 클릭"
horizontal_alignment = 1

[node name="UpgradePanel" type="ScrollContainer" parent="UILayer/MainUI"]
layout_mode = 0
offset_left = 40.0
offset_top = 1200.0
offset_right = 1040.0
offset_bottom = 1880.0

[node name="UpgradeList" type="VBoxContainer" parent="UILayer/MainUI/UpgradePanel"]
layout_mode = 2

[connection signal="pressed" from="UILayer/MainUI/ClickButton" to="." method="_on_click_button_pressed"]
